# benchmark-design

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements-heatmap.txt
benchmark_design/: __init__.py  __main__.py  commands.py  export_layout.py  export_pipeline.py  progress.py
benchmark_design/block_level/: __init__.py  block_foreground_density.py  dataset.py  page_metrics.py  processing.py  processing_options.py  sample_record.py
benchmark_design/config/: __init__.py  block_level.py  hmer.py  line_level.py  page_level.py  page_level_latex.py  page_level_latex_split.py  shared.py  vision.py
benchmark_design/foreground/: __init__.py  analysis.py  calibration.py  mask.py  models.py  normalize.py  threshold.py
benchmark_design/hmer/: __init__.py
benchmark_design/io/: __init__.py  benchmark_loader.py  dataset_loaders.py  image.py  polygon.py
benchmark_design/line_level/: __init__.py  bbox_ink.py  config.py  dataset_aspect.py  geometry.py  layout.py  loader.py  models.py  page_worker.py  pipeline.py  sample_selection.py  statistics.py  validation.py
benchmark_design/ocr/: __init__.py  ast_statistics.py  confusable_tokens.py  consolidated.py  cross_benchmark.py  duplicates.py  expression_content.py  expression_features.py  latex_ast_parser.py  lbd_coordinates.py  length_bin_specs.py  length_bins.py  length_distribution.py  line_crop.py  matrix_environments.py  parse_validate.py  position_forest.py  processing.py  processing_options.py  scale.py  structure_complexity.py  structure_distribution.py  structure_forest.py  structure_stc.py  token_longtail.py  token_taxonomy.py  tokenizer.py  tokenizer_docs.py
benchmark_design/vision/: masks.py  (+5 more)
config/: heatmap_analysis.yaml  image_analysis.yaml  line_analysis.yaml  page_level_latex_split.yaml  project.yaml
configs/: default.yaml  full_gpu.yaml  smoke.yaml
heatmap_analysis/: README.md  __init__.py  __main__.py  aggregation.py  alignment.py  cli.py  cluster_study.py  clustering.py  comparison.py  config.py  experiments.py  extract_worker.py  gpu.py  gpu_clustering.py  handwriting.py  heatmap.py  image_ops.py  io.py  metrics.py  pipeline.py  reporting.py  representatives.py  utils.py  visualization.py
reports/: benchmark.json  benchmark.md  model_introspection.json  model_introspection.md
scripts/: diagnose_feature_hang.py  render_page_line_orientations.py
src/: README.md  __init__.py  __main__.py  analyze_features.py  build_manifest.py  build_report.py  config.py  embedding_quality.py  feature_store.py  inspect_model.py  model_compat.py  parse_layout.py  parse_ocr_quality.py  parse_recognition.py  pipeline.py  plot_features.py  quality_gates.py  utils.py  visual_feature_runner.py  vllm_ocr_runner.py
tempt/: check_duplicate_order.py  crop_by_points.py  foreground_diagnostic_eval_samples.csv  mb7r6ah2iimsvlne2s.json  render_invalid_txtblocks.py  render_order_arrows.py
tests/: conftest.py  test_aggregation.py  test_alignment.py  test_benchmark_export_pipeline.py  test_block_density_plotting.py  test_block_density_summary.py  test_block_foreground_density.py  test_clustering.py  test_confusable_token_examples.py  test_confusable_token_figures.py  test_confusable_tokens.py  test_cross_benchmark.py  test_cross_benchmark_report.py  test_dataset_loaders.py  test_dataset_overview.py  test_deepseek_features.py  test_deleted_block_scale.py  test_duplicates.py  test_export_examples.py  test_export_layout.py  test_export_pipeline.py  test_expression_content.py  test_expression_features.py  test_flow_structure.py  test_foreground_load.py  test_foreground_threshold.py  test_gpu_ops.py  test_heatmap.py  test_heatmap_pipeline_smoke.py  test_latex_ast_parser.py  test_lbd_coordinate_figures.py  test_lbd_coordinates.py  test_line_level_bbox_ink.py  test_line_level_chapter.py  test_line_level_error_visualization.py  test_line_level_export_smoke.py  test_line_level_geometry.py  test_line_level_layout.py  test_line_level_metric_interpretation.py  test_line_level_parallel.py  (+39 more)
(+344 files in other folders)
